# deviated-septa

./: .env.example  .neon  AGENTS.md  SETUP.md  readme.md
.github/workflows/: poll.yml  poll.yml.disabled
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.js
frontend/public/: philly-boundary.json  route-lines.json
frontend/src/: App.vue
frontend/src/components/: KpiHeader.vue  RouteMap.vue  RouteTable.vue
frontend/src/composables/: useDashboardData.js
frontend/src/lib/: neon.js
ingestion/: alembic.ini  pyproject.toml
ingestion/migrations/: env.py
ingestion/migrations/versions/: 001_initial_schema.py  002_aggregation_functions.py  004_dedup_arrival_records_add_unique_index.py  005_add_foreign_keys_and_freshness_table.py  006_drop_service_id_fk.py  13d786d4b2d1_create_rpc_functions.py  ec5b041f3bda_grant_service_role_table_permissions.py
ingestion/poller/: db.py  gtfs_rt.py  gtfs_static.py  main.py  models.py
ingestion/scripts/: export_route_lines.py  repair_observation_service_dates.py  setup_readonly_role.sql
ingestion/tests/: test_gtfs_rt.py
