[project]
name = "septa-poller"
version = "0.1.0"
description = "SEPTA reliability poller — downloads GTFS data and computes on-time performance"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "gtfs-realtime-bindings>=1.0",
    "protobuf>=4.21",
    "python-dateutil>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "alembic>=1.13",
    "SQLAlchemy>=2.0",
    "psycopg2-binary>=2.9",
]

